--- a/christmas-pages/p0tfur.html
+++ b/christmas-pages/p0tfur.html
@@ -1,150 +1,281 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Świąteczny Prezent - P0tfur</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Iceberg&family=Montserrat:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: radial-gradient(circle at center, #1a2a6c, #b21f1f, #fdbb2d); /* Fallback */
-            background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: white;
-            overflow: hidden;
-        }
+      :root {
+        --ice-primary: #4facfe;
+        --ice-secondary: #00f2fe;
+        --ice-bg: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
+        --glass: rgba(255, 255, 255, 0.1);
+        --glass-border: rgba(255, 255, 255, 0.2);
+      }
 
-        .frost-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100" height="100" filter="url(%23noise)" opacity="0.1"/></svg>');
-            opacity: 0.3;
-            z-index: 1;
-        }
+      body {
+        margin: 0;
+        padding: 2rem 1rem 4rem;
+        background: var(--ice-bg);
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: "Montserrat", sans-serif;
+        color: white;
+        overflow-x: hidden;
+        overflow-y: auto;
+        position: relative;
+      }
 
-        .card {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            padding: 3rem;
-            border-radius: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            text-align: center;
-            max-width: 450px;
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-            z-index: 10;
-            position: relative;
-        }
+      body::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: radial-gradient(circle at 50% 50%, rgba(79, 172, 254, 0.15) 0%, transparent 80%);
+        pointer-events: none;
+      }
 
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            text-shadow: 0 0 10px rgba(0, 191, 255, 0.7);
-            background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+      .frost-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100" height="100" filter="url(%23noise)" opacity="0.1"/></svg>');
+        opacity: 0.2;
+        z-index: 1;
+      }
 
-        p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
-            color: #e0f7fa;
-        }
+      .card {
+        background: var(--glass);
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        padding: 3.5rem;
+        border-radius: 25px;
+        border: 1px solid var(--glass-border);
+        text-align: center;
+        max-width: 480px;
+        box-shadow: 0 15px 45px rgba(0, 0, 0, 0.4), inset 0 0 20px rgba(79, 172, 254, 0.1);
+        z-index: 10;
+        position: relative;
+        overflow: hidden;
+        animation: slideUp 1s cubic-bezier(0.2, 0.8, 0.2, 1);
+        transition: transform 0.4s ease;
+      }
 
-        .owner {
-            color: #4facfe;
-            font-weight: bold;
-            font-size: 1.3rem;
-            text-shadow: 0 0 5px rgba(79, 172, 254, 0.5);
-        }
+      .card:hover {
+        transform: translateY(-8px);
+      }
 
-        .gift-box {
-            font-size: 5rem;
-            margin-bottom: 1.5rem;
-            display: inline-block;
-            filter: drop-shadow(0 0 15px rgba(0, 242, 254, 0.6));
-            animation: float 3s ease-in-out infinite;
-        }
+      .card::before {
+        content: "";
+        position: absolute;
+        top: -150%;
+        left: -150%;
+        width: 300%;
+        height: 300%;
+        background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+        animation: rotate 10s linear infinite;
+        pointer-events: none;
+      }
 
-        @keyframes float {
-            0% { transform: translateY(0px) rotate(0deg); }
-            50% { transform: translateY(-15px) rotate(2deg); }
-            100% { transform: translateY(0px) rotate(0deg); }
+      @keyframes rotate {
+        from {
+          transform: rotate(0deg);
         }
-
-        .discord-btn {
-            background: linear-gradient(45deg, #2196F3, #21CBF3);
-            color: white;
-            text-decoration: none;
-            padding: 15px 30px;
-            border-radius: 30px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            box-shadow: 0 5px 15px rgba(33, 203, 243, 0.3);
-            transition: all 0.3s ease;
-            display: inline-block;
-            border: 1px solid rgba(255,255,255,0.2);
+        to {
+          transform: rotate(360deg);
         }
+      }
 
-        .discord-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 25px rgba(33, 203, 243, 0.5);
-            background: linear-gradient(45deg, #21CBF3, #2196F3);
+      @keyframes slideUp {
+        from {
+          transform: translateY(50px);
+          opacity: 0;
         }
-
-        .sparkle {
-            position: absolute;
-            background: white;
-            border-radius: 50%;
-            animation: twinkle 1.5s infinite ease-in-out;
+        to {
+          transform: translateY(0);
+          opacity: 1;
         }
+      }
 
-        @keyframes twinkle {
-            0%, 100% { opacity: 0; transform: scale(0.5); }
-            50% { opacity: 1; transform: scale(1.2); }
+      h1 {
+        font-family: "Iceberg", cursive;
+        font-size: 3rem;
+        margin-bottom: 1.5rem;
+        text-shadow: 0 0 20px rgba(0, 242, 254, 0.5);
+        background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        letter-spacing: 2px;
+      }
+
+      p {
+        font-size: 1.15rem;
+        line-height: 1.8;
+        margin-bottom: 1.5rem;
+        color: #e0f7fa;
+        font-weight: 300;
+      }
+
+      .footer-note {
+        margin-top: 1.5rem;
+        width: 100%;
+        text-align: center;
+        font-size: 0.8rem;
+        color: rgba(255, 255, 255, 0.6);
+        z-index: 5;
+        pointer-events: none;
+      }
+
+      .owner {
+        color: var(--ice-secondary);
+        font-weight: 700;
+        font-size: 1.4rem;
+        text-shadow: 0 0 10px rgba(0, 242, 254, 0.4);
+      }
+
+      .gift-box {
+        font-size: 6rem;
+        margin-bottom: 1rem;
+        display: inline-block;
+        filter: drop-shadow(0 0 20px rgba(0, 242, 254, 0.8));
+        animation: float 4s ease-in-out infinite;
+      }
+
+      @keyframes float {
+        0%,
+        100% {
+          transform: translateY(0px) rotate(-5deg);
         }
+        50% {
+          transform: translateY(-20px) rotate(5deg);
+        }
+      }
 
+      .discord-btn {
+        background: linear-gradient(45deg, #2196f3, #00f2fe);
+        color: white;
+        text-decoration: none;
+        padding: 18px 40px;
+        border-radius: 50px;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        box-shadow: 0 10px 25px rgba(33, 150, 243, 0.4);
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        display: inline-block;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        margin: 1rem 0;
+      }
+
+      .discord-btn:hover {
+        transform: scale(1.05) translateY(-3px);
+        box-shadow: 0 15px 35px rgba(33, 150, 243, 0.6);
+        background: linear-gradient(45deg, #00f2fe, #2196f3);
+      }
+
+      .sparkle {
+        position: absolute;
+        background: white;
+        border-radius: 50%;
+        pointer-events: none;
+        box-shadow: 0 0 10px 2px white;
+      }
+
+      .snowflake {
+        position: absolute;
+        color: white;
+        pointer-events: none;
+        z-index: 5;
+        filter: blur(0.5px);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="frost-overlay"></div>
     <div class="card" id="card">
-        <div class="gift-box">🧊</div>
-        <h1>Zimowy Skarb!</h1>
-        <p>Brrr! Trafiłeś do mroźnej kryjówki <span class="owner">p0tfur</span>'a!</p>
-        <p>Odkryłeś ukryty prezent. Aby go odebrać, musisz się pośpieszyć, zanim zamarznie!</p>
-        <p>Napisz na Discord do właściciela ze słowami: <br><em>"Lód został przełamany"</em></p>
-        <a href="https://discord.com" target="_blank" class="discord-btn">Odbierz Prezent</a>
-        <p>Pospiesz się, bo liczba prezentów jest oganiczona!</p>
+      <div class="gift-box">🧊</div>
+      <h1>Zimowy Skarb!</h1>
+      <p>Brrr! Trafiłeś do mroźnej kryjówki <span class="owner">p0tfor</span>'a!</p>
+      <p>Odkryłeś ukryty prezent. Aby go odebrać, musisz się pośpieszyć, zanim zamarznie!</p>
+      <p>Napisz na Discord do właściciela ze słowami: <br /><em>"Lód został przełamany"</em></p>
+      <a href="https://discord.com" target="_blank" class="discord-btn">Odbierz Prezent</a>
+      <p>Pospiesz się, bo liczba prezentów jest oganiczona!</p>
     </div>
+    <div class="footer-note">Zabawa jest finansowana przez organizatorów z prywatnych środków.</div>
 
     <script>
-        // Create sparkles
-        function createSparkles() {
-            const card = document.getElementById('card');
-            for(let i=0; i<10; i++) {
-                const sparkle = document.createElement('div');
-                sparkle.classList.add('sparkle');
-                const size = Math.random() * 4 + 2;
-                sparkle.style.width = size + 'px';
-                sparkle.style.height = size + 'px';
-                sparkle.style.left = Math.random() * 100 + '%';
-                sparkle.style.top = Math.random() * 100 + '%';
-                sparkle.style.animationDelay = Math.random() * 2 + 's';
-                card.appendChild(sparkle);
+      function createSnow() {
+        const snowflake = document.createElement("div");
+        snowflake.classList.add("snowflake");
+        snowflake.innerHTML = ["❄", "❅", "❆"][Math.floor(Math.random() * 3)];
+        snowflake.style.left = Math.random() * 100 + "vw";
+        snowflake.style.fontSize = Math.random() * 15 + 10 + "px";
+        snowflake.style.opacity = Math.random() * 0.8;
+
+        const duration = Math.random() * 10 + 10;
+        const animationName = `fall-${Math.random().toString(36).substr(2, 9)}`;
+        const styleSheet = document.createElement("style");
+        styleSheet.textContent = `
+          @keyframes ${animationName} {
+            0% { transform: translateY(-20px) rotate(0deg); }
+            100% { transform: translateY(110vh) rotate(360deg); }
+          }
+        `;
+        document.head.appendChild(styleSheet);
+        snowflake.style.animation = `${animationName} ${duration}s linear forwards`;
+
+        document.body.appendChild(snowflake);
+        setTimeout(() => {
+          snowflake.remove();
+          styleSheet.remove();
+        }, duration * 1000);
+      }
+
+      function createSparkles() {
+        const card = document.getElementById("card");
+        for (let i = 0; i < 15; i++) {
+          const sparkle = document.createElement("div");
+          sparkle.classList.add("sparkle");
+          const size = Math.random() * 3 + 1;
+          sparkle.style.width = size + "px";
+          sparkle.style.height = size + "px";
+          sparkle.style.left = Math.random() * 100 + "%";
+          sparkle.style.top = Math.random() * 100 + "%";
+
+          const animationName = `twinkle-${Math.random().toString(36).substr(2, 9)}`;
+          const styleSheet = document.createElement("style");
+          styleSheet.textContent = `
+            @keyframes ${animationName} {
+              0%, 100% { opacity: 0; transform: scale(0); }
+              50% { opacity: 1; transform: scale(1.5); }
             }
+          `;
+          document.head.appendChild(styleSheet);
+          sparkle.style.animation = `${animationName} ${Math.random() * 2 + 1}s infinite ease-in-out`;
+
+          card.appendChild(sparkle);
         }
-        createSparkles();
+      }
+
+      // Mouse tracking glow
+      document.addEventListener("mousemove", (e) => {
+        const x = (e.clientX / window.innerWidth) * 100;
+        const y = (e.clientY / window.innerHeight) * 100;
+        document.body.style.background = `radial-gradient(circle at ${x}% ${y}%, #203a43, #0f2027)`;
+      });
+
+      setInterval(createSnow, 300);
+      createSparkles();
+      for (let i = 0; i < 30; i++) createSnow();
     </script>
-</body>
+  </body>
 </html>
