--- a/christmas-pages/reinspire.html
+++ b/christmas-pages/reinspire.html
@@ -1,146 +1,325 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Świąteczny Prezent - ReInspire</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #0f380f;
-            background-image: 
-                radial-gradient(circle at 50% 50%, #1a4a1a 0%, #0f380f 100%);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Verdana', sans-serif;
-            color: #fff;
-            overflow: hidden;
-            position: relative;
+      :root {
+        --forest-deep: #0a2b0a;
+        --forest-light: #1b4d1b;
+        --gold: #d4af37;
+        --gold-bright: #f9e272;
+        --berry: #c62828;
+        --glass-green: rgba(27, 77, 27, 0.7);
+      }
+
+      body {
+        margin: 0;
+        padding: 2rem 1rem 4rem;
+        background: radial-gradient(circle at 50% 50%, #1a4a1a 0%, var(--forest-deep) 100%);
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: "Lora", serif;
+        color: #fff;
+        overflow-x: hidden;
+        overflow-y: auto;
+        position: relative;
+      }
+
+      body::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: url("https://www.transparenttextures.com/patterns/dark-matter.png");
+        opacity: 0.3;
+        pointer-events: none;
+      }
+
+      .lights-wire {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: space-around;
+        padding-top: 15px;
+        z-index: 20;
+        pointer-events: none;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), transparent);
+      }
+
+      .light {
+        width: 16px;
+        height: 22px;
+        border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+        position: relative;
+        animation: glow 1.5s infinite alternate;
+      }
+
+      .light::before {
+        content: "";
+        position: absolute;
+        top: -4px;
+        left: 4px;
+        width: 8px;
+        height: 6px;
+        background: #333;
+        border-radius: 2px;
+      }
+
+      .light:nth-child(4n + 1) {
+        background: #ff4444;
+        box-shadow: 0 0 15px #ff4444;
+        animation-delay: 0s;
+      }
+      .light:nth-child(4n + 2) {
+        background: var(--gold);
+        box-shadow: 0 0 15px var(--gold);
+        animation-delay: 0.4s;
+      }
+      .light:nth-child(4n + 3) {
+        background: #44ff44;
+        box-shadow: 0 0 15px #44ff44;
+        animation-delay: 0.8s;
+      }
+      .light:nth-child(4n + 4) {
+        background: #4444ff;
+        box-shadow: 0 0 15px #4444ff;
+        animation-delay: 1.2s;
+      }
+
+      @keyframes glow {
+        0% {
+          opacity: 0.5;
+          transform: scale(0.9) rotate(-5deg);
+          filter: brightness(0.8);
         }
-
-        .lights-wire {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            display: flex;
-            justify-content: space-around;
-            padding-top: 10px;
-            z-index: 20;
-            pointer-events: none;
+        100% {
+          opacity: 1;
+          transform: scale(1.1) rotate(5deg);
+          filter: brightness(1.2);
+          box-shadow: 0 0 25px currentColor;
         }
+      }
 
-        .light {
-            width: 15px;
-            height: 15px;
-            border-radius: 50%;
-            animation: glow 1s infinite alternate;
+      .card {
+        background: var(--glass-green);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        padding: 50px;
+        border-radius: 20px;
+        border: 2px solid var(--gold);
+        text-align: center;
+        max-width: 550px;
+        box-shadow: 0 25px 60px rgba(0, 0, 0, 0.6), inset 0 0 30px rgba(212, 175, 55, 0.1);
+        position: relative;
+        z-index: 10;
+        animation: cardEntry 1.2s cubic-bezier(0.2, 0.8, 0.2, 1);
+      }
+
+      @keyframes cardEntry {
+        0% {
+          transform: scale(0.9) translateY(30px);
+          opacity: 0;
         }
-
-        .light:nth-child(3n+1) { background: #ff0000; box-shadow: 0 0 10px #ff0000; animation-delay: 0s; }
-        .light:nth-child(3n+2) { background: #ffd700; box-shadow: 0 0 10px #ffd700; animation-delay: 0.3s; }
-        .light:nth-child(3n+3) { background: #00ff00; box-shadow: 0 0 10px #00ff00; animation-delay: 0.6s; }
-
-        @keyframes glow {
-            from { opacity: 0.4; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1.1); box-shadow: 0 0 20px currentColor; }
+        100% {
+          transform: scale(1) translateY(0);
+          opacity: 1;
         }
+      }
 
-        .card {
-            background: #1b4d1b;
-            padding: 40px;
-            border-radius: 10px;
-            border: 4px solid #d4af37; /* Gold border */
-            text-align: center;
-            max-width: 500px;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-            position: relative;
+      .card::before,
+      .card::after {
+        content: "🎄";
+        position: absolute;
+        font-size: 5rem;
+        filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.3));
+        animation: treeFloat 4s ease-in-out infinite;
+      }
+
+      .card::before {
+        top: -45px;
+        left: -45px;
+        transform: rotate(-15deg);
+      }
+      .card::after {
+        bottom: -45px;
+        right: -45px;
+        transform: rotate(15deg);
+        animation-delay: -2s;
+      }
+
+      @keyframes treeFloat {
+        0%,
+        100% {
+          transform: translateY(0) rotate(-15deg);
         }
-
-        .card::before {
-            content: "🎄";
-            position: absolute;
-            top: -30px;
-            left: -30px;
-            font-size: 4rem;
-            transform: rotate(-15deg);
+        50% {
+          transform: translateY(-15px) rotate(-10deg);
         }
+      }
 
-        .card::after {
-            content: "🎄";
-            position: absolute;
-            bottom: -30px;
-            right: -30px;
-            font-size: 4rem;
-            transform: rotate(15deg);
-        }
+      h1 {
+        color: var(--gold);
+        font-family: "Mountains of Christmas", cursive;
+        font-size: 3.5rem;
+        margin-bottom: 25px;
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+        letter-spacing: 2px;
+      }
 
-        h1 {
-            color: #d4af37;
-            font-family: 'Georgia', serif;
-            font-size: 2.2rem;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px #000;
-        }
+      p {
+        font-size: 1.2rem;
+        line-height: 1.8;
+        color: #f1f8e9;
+        margin-bottom: 20px;
+      }
 
-        p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            color: #e8f5e9;
-        }
+      .elf-name {
+        color: #a2ff00;
+        font-weight: 700;
+        font-size: 1.4rem;
+        text-shadow: 0 0 10px rgba(162, 255, 0, 0.4);
+        display: inline-block;
+        padding: 0 5px;
+      }
 
-        .elf-name {
-            color: #76ff03;
-            font-weight: bold;
-            font-size: 1.3rem;
-            text-transform: uppercase;
-        }
+      .cta-btn {
+        display: inline-block;
+        margin-top: 30px;
+        padding: 18px 50px;
+        background: linear-gradient(135deg, var(--berry), #8e0000);
+        color: white;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 1.1rem;
+        border-radius: 50px;
+        border: 2px solid #a51d1d;
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        box-shadow: 0 10px 20px rgba(198, 40, 40, 0.4);
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+      }
 
-        .cta-btn {
-            display: inline-block;
-            margin-top: 25px;
-            padding: 15px 40px;
-            background: #c62828;
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            border: 2px solid #b71c1c;
-            transition: background 0.3s;
-            box-shadow: 0 5px 0 #7f0000;
-        }
+      .cta-btn:hover {
+        transform: scale(1.05) translateY(-5px);
+        box-shadow: 0 15px 30px rgba(198, 40, 40, 0.6);
+        background: linear-gradient(135deg, #d32f2f, var(--berry));
+      }
 
-        .cta-btn:active {
-            transform: translateY(3px);
-            box-shadow: 0 2px 0 #7f0000;
-        }
+      .cta-btn:active {
+        transform: translateY(-2px);
+      }
 
-        .cta-btn:hover {
-            background: #d32f2f;
-        }
+      /* Falling Pine Needles / Snow */
+      .needle {
+        position: absolute;
+        background: #2e7d32;
+        width: 2px;
+        height: 10px;
+        border-radius: 2px;
+        pointer-events: none;
+        opacity: 0.6;
+      }
 
+      .footer-note {
+        margin-top: 1.5rem;
+        width: 100%;
+        text-align: center;
+        font-size: 0.8rem;
+        color: rgba(255, 255, 255, 0.5);
+        z-index: 5;
+        pointer-events: none;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="lights-wire">
-        <div class="light"></div><div class="light"></div><div class="light"></div>
-        <div class="light"></div><div class="light"></div><div class="light"></div>
-        <div class="light"></div><div class="light"></div><div class="light"></div>
-        <div class="light"></div><div class="light"></div><div class="light"></div>
-        <div class="light"></div><div class="light"></div><div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
     </div>
 
     <div class="card">
-        <h1>Wesołych Świąt!</h1>
-        <p>Ho! Ho! Świąteczny Elf wysłany przez <span class="elf-name">ReInspire</span> przyłapał Cię na myszkowaniu!</p>
-        <p>Ale spokojnie, zamiast rózgi mamy dla Ciebie prezent!</p>
-        <p>Zgłoś się na Discord do <strong>ReInspire</strong> z hasłem: <br><em>"Zielona Latarnia"</em></p>
-        <a href="https://discord.com" target="_blank" class="cta-btn">Odbierz Upominek</a>
-        <p>Pospiesz się, bo liczba prezentów jest oganiczona!</p>
+      <h1>Wesołych Świąt!</h1>
+      <p>Ho! Ho! Świąteczny Elf wysłany przez <span class="elf-name">ReInspire</span> przyłapał Cię na myszkowaniu!</p>
+      <p>Ale spokojnie, zamiast rózgi mamy dla Ciebie prezent!</p>
+      <p>
+        Zgłoś się w Prywatnej Wiadomości w grze do <strong>ReInspire</strong> z hasłem: <br /><em>"Zielone Święta"</em>
+      </p>
+      <a href="https://eclesiar.com/user/11315" target="_blank" class="cta-btn">Odbierz Upominek</a>
+      <p>Pospiesz się, bo liczba prezentów jest oganiczona!</p>
     </div>
-</body>
+    <div class="footer-note">Zabawa jest finansowana przez organizatorów z prywatnych środków.</div>
+    <script>
+      function createNeedle() {
+        const needle = document.createElement("div");
+        needle.classList.add("needle");
+
+        const isSnow = Math.random() > 0.5;
+        if (isSnow) {
+          needle.style.background = "#fff";
+          needle.style.width = "4px";
+          needle.style.height = "4px";
+          needle.style.borderRadius = "50%";
+        }
+
+        const startX = Math.random() * 100;
+        needle.style.left = startX + "vw";
+        needle.style.opacity = Math.random() * 0.5 + 0.2;
+
+        const duration = Math.random() * 5 + 5;
+        const animationName = `fall-${Math.random().toString(36).substr(2, 9)}`;
+        const styleSheet = document.createElement("style");
+        styleSheet.textContent = `
+          @keyframes ${animationName} {
+            0% { transform: translateY(-20px) rotate(0deg); }
+            100% { transform: translateY(110vh) rotate(${Math.random() * 360}deg); }
+          }
+        `;
+        document.head.appendChild(styleSheet);
+        needle.style.animation = `${animationName} ${duration}s linear forwards`;
+
+        document.body.appendChild(needle);
+        setTimeout(() => {
+          needle.remove();
+          styleSheet.remove();
+        }, duration * 1000);
+      }
+
+      // Parallax effect on mouse move
+      document.addEventListener("mousemove", (e) => {
+        const amount = 20;
+        const x = (window.innerWidth / 2 - e.pageX) / amount;
+        const y = (window.innerHeight / 2 - e.pageY) / amount;
+        document.querySelector(
+          ".card"
+        ).style.boxShadow = `${x}px ${y}px 60px rgba(0, 0, 0, 0.6), inset 0 0 30px rgba(212, 175, 55, 0.1)`;
+      });
+
+      setInterval(createNeedle, 200);
+      for (let i = 0; i < 20; i++) createNeedle();
+    </script>
+  </body>
 </html>
